Add multipart solution

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
-/* Noramlize the CSS for Plume (it's already normalized, but as it's scoped these are  etter to be added */
+/* 
+Normalize the CSS for Plume (it's already normalized,
+but as it's scoped these are better to be added
+*/
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
